# obs-studio

./: .gitignore
.github/workflows/: cargo-lock.yml  flatpak-crates.yml  flatpak.yml  main.yml
CI/: check-cargo-locks.sh  check-flatpak-crates.sh
CI/flatpak/: com.obsproject.Studio.json  corrosion-cargo-sources.json  webrtc-cargo-sources.json
UI/: obs-app.cpp  ui-validation.cpp  window-basic-settings-stream.cpp  window-basic-settings.hpp
UI/data/locale/: en-US.ini
plugins/obs-webrtc/: CMakeLists.txt  webrtc-output.c  webrtc-output.h  webrtc-service.c  webrtc-services-main.c  webrtc.c  whip-output.c  whip-output.h  whip-service.c
plugins/obs-webrtc/data/locale/: en-US.ini
plugins/obs-webrtc/webrtc/: Cargo.toml  bindings.h  build.rs
plugins/obs-webrtc/webrtc/src/: lib.rs  obs_log.rs  output.rs  stream.rs  whip.rs
plugins/obs-webrtc/webrtc/src/ffi/: mod.rs  obs.rs  output.rs
